<resources>
    <string name="app_name">QuizzApp_DR1_AT</string>


    <!-- STRING PARA TÍTULO -->
    <string name="score">PLACAR 0/3</string>
    <string name="question_number">1/3 QUESTÃO</string>

    <!-- STRING PARA AS QUESTÕES -->
    <string name="question_1">Qual o nome da linguagem que estamos aprendendo neste bloco?</string>
    <string name="question1_A">C#</string>
    <string name="question1_B">Javascript</string>
    <string name="question1_C">Python</string>
    <string name="question1_D">Kotlin</string>
    <string name="answer_1">Kotlin</string>


    <string name="question_2">Qual o nome da aplicação IDE que usamos neste bloco?</string>
    <string name="question_2A">Visual Studio</string>
    <string name="question_2B">Android Studio</string>
    <string name="question_2C">XCode</string>
    <string name="question_2D">Eclipse</string>
    <string name="answer_2">Android Studio</string>


    <string name="question_3">Qual nome da empresa que criou o Kotlin?</string>
    <string name="question_3A">Google</string>
    <string name="question_3B">Oracle</string>
    <string name="question_3C">Microsoft</string>
    <string name="question_3D">JetBrains</string>
    <string name="answer_3">JetBrains</string>


    <string name="selctedoption">SelctedOption</string>
    <string name="correctanswer">CorrectAnswer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>